force-app/main/default/objects/bofc__Login_Details__c/fields/bofc__csId__c.field-meta.xml
<CustomField>
    <fullName>bofc__csId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>csId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>