force-app/main/default/objects/bofc__Login_Details__c/fields/bofc__Current_Org__c.field-meta.xml
<CustomField>
    <fullName>bofc__Current_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Org</label>
    <type>Checkbox</type>
</CustomField>