force-app/main/default/objects/bofc__Login_Details__c/fields/bofc__Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Instance_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>