force-app/main/default/objects/bofc__Login_Details__c/fields/bofc__IsSandbox__c.field-meta.xml
<CustomField>
    <fullName>bofc__IsSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSandbox?</label>
    <type>Checkbox</type>
</CustomField>