force-app/main/default/objects/bofc__Login_Details__c/fields/bofc__pwd__c.field-meta.xml
<CustomField>
    <fullName>bofc__pwd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>pwd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>